<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.fragments.HomeFragment"
        android:label="@string/navigation_home_label"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_leave_summary"
        android:name="com.example.myapplication.fragments.LeaveTabFragment"
        android:label="@string/navigation_leave_summary_label"
        tools:layout="@layout/fragment_leave_summary" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.myapplication.fragments.ProfileFragment"
        android:label="@string/navigation_profile_label"
        tools:layout="@layout/fragment_profile" />
</navigation>