<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/applyLeaveTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_leave_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/leaveTypeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="leaveType"
        android:backgroundTint="@android:color/darker_gray"
        android:hint="@string/leave_type_hint"
        android:importantForAutofill="yes"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@android:color/black"
        android:textColorHint="#546E7A"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/leaveDatesInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="leaveDates"
        android:backgroundTint="@android:color/darker_gray"
        android:hint="@string/leave_dates_hint"
        android:importantForAutofill="yes"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@android:color/black"
        android:textColorHint="#546E7A"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/applyLeaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_leave_button"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/statusMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16sp"
        android:textColor="@android:color/holo_red_dark" />

</LinearLayout>